@@ -175,32 +175,6 @@ namespace CIAO
   }
 
   CORBA::Object_ptr
-  Session_Container::install_servant (PortableServer::Servant p,
-                                      Container::OA_Type t
-                                      ACE_ENV_ARG_DECL)
-    ACE_THROW_SPEC ((CORBA::SystemException))
-  {
-    PortableServer::POA_ptr tmp = 0;
-
-    if (t == Container::Component)
-      tmp = this->component_poa_.in ();
-    else
-      tmp = this->facet_cons_poa_.in ();
-
-    PortableServer::ObjectId_var oid
-      = tmp->activate_object (p
-                              ACE_ENV_ARG_PARAMETER);
-    ACE_CHECK_RETURN (0);
-
-    CORBA::Object_var objref
-      = tmp->id_to_reference (oid.in ()
-                              ACE_ENV_ARG_PARAMETER);
-    ACE_CHECK_RETURN (0);
-
-    return objref._retn ();
-  }
-
-  CORBA::Object_ptr
   Session_Container::install_component (PortableServer::Servant p,
                                         PortableServer::ObjectId_out oid
                                         ACE_ENV_ARG_DECL)
