@@ -1,3 +1,12 @@
+Sat Sep 11 03:35:24 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+ 	* DAnCE/ciao/Container_Base.cpp:
+	* DAnCE/ciao/Container_Base.h:
+	* ciao/Container_Base.cpp:
+	* ciao/Container_Base.h:
+
+	  Removed install_servant () since it is not used.
+
 Fri Sep 10 22:28:45 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
  	* CIDLC/ServantSourceGenerator.cpp:
